[package]
name = "mpolynomial"
version = "0.1.0"
authors = ["apelloni <apelloni90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2"
num-traits = "*"
f128 = { git = "https://github.com/benruijl/f128" }
