[package]
name = "mpolynomial"
version = "0.1.0"
authors = ["apelloni <apelloni90@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3"
num-traits = "*"
itertools = "*"
regex = "*"
pest = "2.1.3"
pest_derive = "^2.1.0"
f128 = { git = "https://github.com/benruijl/f128" }
